# Bot_me

./: .gitignore  CMakeLists.txt  README.md  default_config.conf  users
clients/cpp_boost/: CMakeLists.txt  Client.cpp  main.cpp
inc/: ClientManager.h  CommunicationManager.h  ConfigReader.h  ConsoleReader.h  Game.h  PlayerManager.h  ProgramManager.h  Serializable.h  TestGame.h  config_reader.h  server.h
inc/moon_craft/: MoonCraft.h
inc/utests/: SerializableTests.h
inc/wild_west/: WildWest.h
src/: CMakeLists.txt  ClientManager.cpp  CommunicationManager.cpp  ConfigReader.cpp  ConsoleReader.cpp  Game.cpp  PlayerManager.cpp  ProgramManager.cpp  Serializable.cpp  Server.cpp  TestGame.cpp  config_reader.cpp  main.cpp  server.cpp
src/moon_craft/: MoonCraft.cpp
src/utests/: Serialization.cpp
src/wild_west/: WildWest.cpp
